# soundoftext-haskell

./: .gitignore  LICENSE  README.md  sound-of-text.cabal  soundoftext.cabal
snaplets/heist/templates/: index.tpl  results.tpl  sound.tpl  soundoftext.tpl
snaplets/sqlite-simple/: devel.cfg
src/: Application.hs  Database.hs  Languages.hs  Main.hs  Site.hs  SoundManager.hs  SoundOfText.hs
static/js/: index.js  nosupport.js
static/stylesheets/: ie.css  index.css
templates/: index.html
