Name:                sound-of-text
Version:             0.1
License:             MIT
License-File:        LICENSE
Author:              Nick Pierson
Maintainer:          nick.c.pierson@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable sound-of-text
  hs-source-dirs: src
  main-is: SoundOfText.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    http-client               >= 0.4   && < 0.5,
    directory                 >= 1.2   && < 1.3,
    filepath                  >= 1.3   && < 1.4,
    transformers              >= 0.3   && < 0.4,
    text                      >= 1.1   && < 1.2

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
