Name:                soundoftext
Version:             0.1
License:             MIT
License-File:        LICENSE
Author:              Nick Pierson
Maintainer:          nick.c.pierson@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable soundoftext
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    heist                     >= 0.14  && < 0.15,
    lens,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap                      >= 0.13  && < 0.14,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    snap-loader-static        >= 0.9   && < 0.10,
    snaplet-sqlite-simple     >= 0.4   && < 1.0,
    sqlite-simple             >= 0.1   && < 1.0,
    http-client               >= 0.4   && < 0.5,
    directory                 >= 1.2   && < 1.3,
    filepath                  >= 1.3   && < 1.4,
    transformers              >= 0.3   && < 0.4,
    text                      >= 1.1   && < 1.2,
    json                      >= 0.9   && < 0.10

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
